--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
-    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/http-proxy": "^1.17.15",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
