--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -39,6 +39,8 @@ jobs:
             --build-arg PAYMENT_SERVICE_URL=${{ secrets.PAYMENT_SERVICE_URL }} \
             --build-arg PRODUCT_SERVICE_URL=${{ secrets.PRODUCT_SERVICE_URL }} \
             --build-arg USER_SERVICE_URL=${{ secrets.USER_SERVICE_URL }} \
+            --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            --build-arg JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }} \
             -t ${{ secrets.ACR_LOGIN_SERVER }}/api-gateway:latest .
 
       # Push the Docker image to Azure Container Registry
